fix em alguns dos layouts
TODO: Melhorar o questionario

--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14285,6 +14285,12 @@ body {
   margin-right: 0.5em;
 } 
 
+.btn-align {
+  padding: 6px 12px;
+  line-height: 1.42857143;
+  vertical-align: middle;
+}
+
 /* PINAX MESSAGE */
 
 .pinax-messages-inbox-container h2 a{
