--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -3,13 +3,19 @@
 <div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
     <div class="card">
         <div class="card-header">
-            <i class="fa fa-tasks"></i> Tarefas
-            {% if 'pinax_messages.add_thread' in perms %}
-            <a class="btn btn-primary" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
-                <i class="fa fa-tasks"></i>
-                Designar Tarefa
-            </a>
-            {% endif %}
+            <div class="row">
+                <div class="col-sm">
+                    <div class="btn-align"><i class="nav-icon fa icon-list"></i> Tarefas</div>
+                </div>
+                <div class="col-sm">
+                    {% if 'pinax_messages.add_thread' in perms %}
+                    <a class="btn btn-primary" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
+                        <i class="nav-icon fa icon-list" style="color:white;"></i>
+                        Designar Tarefa
+                    </a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
         <div class="card-body">
             <div class="col">
@@ -23,17 +29,20 @@
                         <a class="nav-link" data-toggle="tab" href="#recebidas" role="tab" aria-controls="profile">Recebidas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#concluidasEnviadas" role="tab" aria-controls="messages">Concluídas enviadas</a>
+                        <a class="nav-link" data-toggle="tab" href="#concluidasEnviadas" role="tab" aria-controls="messages">Concluídas
+                            enviadas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#concluidasRecebidas" role="tab" aria-controls="messages">Concluídas recebidas</a>
+                        <a class="nav-link" data-toggle="tab" href="#concluidasRecebidas" role="tab" aria-controls="messages">Concluídas
+                            recebidas</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link active" data-toggle="tab" href="#recebidas" role="tab" aria-controls="profile">Recebidas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#concluidasRecebidas" role="tab" aria-controls="messages">Concluídas recebidas</a>
+                        <a class="nav-link" data-toggle="tab" href="#concluidasRecebidas" role="tab" aria-controls="messages">Concluídas
+                            recebidas</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -58,10 +67,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa enviada para:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa enviada para:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa enviada para:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa enviada para:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -80,13 +91,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -118,10 +131,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -140,13 +155,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -178,10 +195,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa enviada para:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa enviada para:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa enviada para:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa enviada para:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -200,13 +219,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name }}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name }}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -238,10 +259,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -260,13 +283,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -299,10 +324,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -321,13 +348,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -359,10 +388,12 @@
                                         <div class="col-sm">
                                             {% if thread.users.all.1 == user %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.0.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.0.first_name}}</p>
                                             {% else %}
                                             <p class="participants">
-                                                <strong>Tarefa recebida por:</strong> {{ thread.users.all.1.first_name}}</p>
+                                                <strong>Tarefa recebida por:</strong> {{
+                                                thread.users.all.1.first_name}}</p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
@@ -381,13 +412,15 @@
                                                 <strong>Mensagem enviada por:</strong> Você</p>
                                             {% else %}
                                             <p class="content">
-                                                <strong>Mensagem enviada por:</strong> {{ thread.latest_message.sender.first_name}}
+                                                <strong>Mensagem enviada por:</strong> {{
+                                                thread.latest_message.sender.first_name}}
                                             </p>
                                             {% endif %}
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Horário da última mensagem:</strong> {{thread.latest_message.sent_at}} </p>
+                                                <strong>Horário da última mensagem:</strong>
+                                                {{thread.latest_message.sent_at}} </p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -402,7 +435,7 @@
                         {% endif %} {% endfor %}
                     </div>
                     {% endif %}
-                    
+
                 </div>
 
             </div>
