trocando departamento->area

--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -70,7 +70,7 @@
               {% if 'conta.view_departamento' in perms %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:departamento_tree' %}">
-                  <i class="nav-icon fa fa-building-o"></i>Departamentos</a>
+                  <i class="nav-icon fa fa-building-o"></i>Área</a>
               </li>
               {% endif %}
               {% if 'conta.view_cargo' in perms %}
