--- a/pmsb_web/conta/templates/dashboard/organograma.html
+++ b/pmsb_web/conta/templates/dashboard/organograma.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm">
                         {% if dep %}
-                        <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma dos Departamentos</div>
+                        <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma das Áreas</div>
                         {% elif tree_list %}
                         <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma Hierárquico</div>
                         {% elif departamentos %}
